--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,19 @@
-            - name: Setup .NET Core SDK
-  uses: actions/setup-dotnet@v4.0.1
-  with:
-    owner: 'Aro'
+name: Deploy to GitHub Pages
+on:
+  push:
+    branches: [ master ]
+jobs:
+  deploy-to-github-pages:
+    # Use ubuntu-latest image to run steps on
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v4.0.1
+        with:
+          dotnet-version: 6.0
+          
+      - name: Publish .NET Core Project
+        run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
           
