--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
           dotnet-version: 6.0
           
       - name: Publish .NET Core Project
-        run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
+        run: dotnet publish portfolio-aro.csproj -c Release -o release --nologo
           
