--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-dotnet@v4.0.1
         with:
           dotnet-version: 6.0
+      - name: Moving to the right directory
+        run: cd portfolio-aro
           
       - name: Publish .NET Core Project
         run: dotnet publish portfolio-aro.csproj -c Release -o release --nologo
