--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,14 @@ on:
     branches: [ master ]
 jobs:
   deploy-to-github-pages:
-    # Use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v4.0.1
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 6.0
-      - name: Moving to the right directory
-        run: cd portfolio-aro
-          
+
       - name: Publish .NET Core Project
-        run: dotnet publish portfolio-aro.csproj -c Release -o release --nologo
-          
+        run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release -o release --nologo
