--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Deploy to GitHub Pages
 env:
   PUBLISH_DIR: bin/Release/netstandard2.1/publish/wwwroot
-  
+
 on:
   push:
     branches: [ master ]
+
 jobs:
   deploy-to-github-pages:
     runs-on: ubuntu-latest
@@ -13,7 +14,10 @@ jobs:
 
       - name: Publish .NET Core Project
         run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release -o release --nologo
-        
+
+      - name: List Publish Directory Contents
+        run: ls -R ${env.PUBLISH_DIR}
+
       - name: Rewrite base href
         uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
         with:
