--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Publish .NET Core Project
-        run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release -o release --nologo
+        run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release --nologo
+        
+      - name: List bin/Release Directory Contents
+        run: ls -R bin/Release
 
-      - name: List Publish Directory Contents
+      - name: List Full Publish Directory Contents
         run: ls -R $PUBLISH_DIR
 
       - name: Rewrite base href
