--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Deploy to GitHub Pages
 env:
-  PUBLISH_DIR: bin/Release/netstandard2.1/publish/wwwroot
+  PUBLISH_DIR: /home/runner/work/personal-portfolio/personal-portfolio/portfolio-aro/bin/Release/net6.0/wwwroot
 
 on:
   push:
@@ -15,12 +15,6 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release --nologo
         
-      - name: List bin/Release Directory Contents
-        run: ls -R bin/Release
-
-      - name: List Full Publish Directory Contents
-        run: ls -R $PUBLISH_DIR
-
       - name: Rewrite base href
         uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
         with:
