--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Deploy to GitHub Pages
 env:
-  PUBLISH_DIR: /home/runner/work/personal-portfolio/personal-portfolio/portfolio-aro/bin/Release/net6.0/wwwroot
+  PUBLISH_DIR: portfolio-aro/bin/Release/net6.0/publish/wwwroot
 
 on:
   push:
@@ -15,6 +15,9 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release --nologo
         
+      - name: List Full Publish Directory Contents
+        run: ls -R $PUBLISH_DIR
+
       - name: Rewrite base href
         uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
         with:
