--- a/portfolio-aro/portfolio-aro.csproj
+++ b/portfolio-aro/portfolio-aro.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.23" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.23" PrivateAssets="all" />
+		<PackageReference Include="PublishSPAforGitHubPages.Build" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
