--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,30 @@
 name: Deploy to GitHub Pages
-env:
-  PUBLISH_DIR: portfolio-aro/bin/Release/net6.0/publish/wwwroot
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
-  deploy-to-github-pages:
+  deploy:
     runs-on: ubuntu-latest
     steps:
+      # Checkout the code
       - uses: actions/checkout@v2
 
+      # Install .NET Core SDK
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
 
-      - name: Publish .NET Core Project
-        run: dotnet publish portfolio-aro/portfolio-aro.csproj -c Release --nologo
-        
-      - name: List Full Publish Directory Contents
-        run: ls -R $PUBLISH_DIR
+      - name: Publish
+        run: dotnet publish portfolio-aro/portfolio-aro.csproj -p:GHPages=true -o:public -c:Release
 
-      - name: Rewrite base href
-        uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
+      # Deploy the site
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          html_path: ${{ env.PUBLISH_DIR }}/index.html
-          base_href: /portfolio-aro/
-
-      - name: GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v1.5.1
-        with:
-          target_branch: gh-pages
-          build_dir: ${{ env.PUBLISH_DIR }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: public/wwwroot
+          force_orphan: true
