--- a/portfolio-aro/portfolio-aro.csproj
+++ b/portfolio-aro/portfolio-aro.csproj
@@ -9,6 +9,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Dictionnary\**" />
+	  <Content Remove="Dictionnary\**" />
+	  <EmbeddedResource Remove="Dictionnary\**" />
+	  <None Remove="Dictionnary\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.23" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.23" PrivateAssets="all" />
 		<PackageReference Include="MudBlazor" Version="6.21.0" />
@@ -17,10 +24,6 @@
 
 	<ItemGroup>
 		<ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Dictionnary\" />
 	</ItemGroup>
 
 </Project>
